refactor: KeywordMapper를 유틸리티 클래스로 변경하고 정적 메서드로 수정